# Python-Acting-Improv-Suggestions

./: README.md  pyproject.toml  testOutput.py
src/Acting-Improv-Suggestions/: acting_improv_suggestion_generator.py  auto_git.py  example.py  improv_data.py  run_git_save.bat  test.py  testOutput.py
